#224 fixed bio overflow and button positioning

--- a/twatter-ui/src/app/components/profile/sidebar/sidebar.component.scss
+++ b/twatter-ui/src/app/components/profile/sidebar/sidebar.component.scss
@@ -38,3 +38,45 @@
 #list {
   margin-top: 75px;
 }
+
+.bio {
+  position: relative;
+  //border: solid 1px cyan;
+}
+
+.bioEdit {
+  position: relative;
+  padding-bottom: 15px;
+  margin-bottom: 15px;
+}
+
+#bioText {
+  margin: 0;
+  padding: 8px 5px 20px 0;
+  word-wrap: break-word;
+  white-space: pre-wrap;
+}
+
+#editButton {
+  //position: absolute;
+  //top: 0;
+  //right: 0;
+  float: right;
+}
+
+mat-form-field {
+  width: 100%;
+  padding: 0;
+}
+
+#cancelButton {
+  position: absolute;
+  right: 65px;
+  bottom: 0;
+}
+
+#saveButton {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+}
